--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="header">
-        <div class="content_header">
+    <header>
+        <div class="logo-box">
+          
+          <img src=""alt="logo"/>
+        </div>
+    <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">favorites recipes</a></li>
+          <li><a href="#">about us</a></li>
+        </ul>
+    </nav>
+    </header>
+    <div class="main_tittle">
+        <div class="big_content">
             <p>Find meals for your ingredient </p>
         </div>
     </div>
@@ -18,7 +30,7 @@
             <a href=""><img src="food.jpg" alt=""></a>
             <div class="content_recipe">
                 <p class="foodtitle"> comida 1</p>
-                <p id="nuevo"></p>
+                <button>read more</button>
             </div>
         </div>
         <div>
