fixing the images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </header>
     <div class="main_tittle">
         <div class="big_content">
-            <p>Find meals for your ingredient </p>
+            <p>Find meals for your ingredient </p> 
+        </div>
+        <div class="searcher">
+            <input type="text" placeholder="Search recipe" class="text_search">
+            <button class="searcher_button">search</button>
         </div>
     </div>
     <div class="images">
@@ -69,6 +73,8 @@
             </div>
         </div>
     </div>
+    <footer>
+    </footer>
 <script src="animation.js"></script>
 </body>
 </html>
